--- a/Back/package.json
+++ b/Back/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "mysql": "^2.15.0",
     "mysql-promise": "^4.1.0",
+    "nodemailer": "^4.6.4",
     "promise-mysql": "^3.2.1",
     "socket.io": "^2.1.0"
   },
